// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`@lad-tech/mobydick-core/Title should renders correctly with descriptionFont 1`] = `
<View
  style={
    {
      "marginBottom": 8,
      "marginTop": 12,
    }
  }
>
  <Text
    allowFontScaling={true}
    style={
      [
        {
          "color": "#353A45",
          "fontFamily": "Inter-Medium",
          "fontSize": 16,
          "lineHeight": 20,
          "minHeight": 20,
        },
        [
          {
            "paddingTop": 8,
            "textAlign": "center",
          },
          {
            "backgroundColor": "#000",
          },
        ],
      ]
    }
  >
    description text two
  </Text>
</View>
`;

exports[`@lad-tech/mobydick-core/Title should renders correctly with titleFont 1`] = `
<View
  style={
    {
      "marginBottom": 8,
      "marginTop": 12,
    }
  }
>
  <Text
    allowFontScaling={true}
    style={
      [
        {
          "color": "#353A45",
          "fontFamily": "Inter-Medium",
          "fontSize": 16,
          "lineHeight": 20,
          "minHeight": 20,
        },
        [
          {
            "textAlign": "center",
          },
          {
            "backgroundColor": "#000",
          },
        ],
      ]
    }
  >
    title two
  </Text>
  <Text
    allowFontScaling={true}
    style={
      [
        {
          "color": "#5E6678",
          "fontFamily": "Inter-Regular",
          "fontSize": 12,
          "lineHeight": 16,
          "minHeight": 16,
        },
        [
          {
            "paddingTop": 8,
            "textAlign": "center",
          },
          {
            "flex": 1,
          },
        ],
      ]
    }
  >
    descriptionText
  </Text>
</View>
`;

exports[`@lad-tech/mobydick-core/Title should renders correctly without descriptionFont 1`] = `
<View
  style={
    {
      "marginBottom": 8,
      "marginTop": 12,
    }
  }
>
  <Text
    allowFontScaling={true}
    style={
      [
        {
          "color": "#20242D",
          "fontFamily": "Inter-SemiBold",
          "fontSize": 18,
          "lineHeight": 22,
          "minHeight": 22,
        },
        [
          {
            "textAlign": "center",
          },
          {
            "flex": 1,
          },
        ],
      ]
    }
  >
    title
  </Text>
  <Text
    allowFontScaling={true}
    style={
      [
        {
          "color": "#5E6678",
          "fontFamily": "Inter-Regular",
          "fontSize": 12,
          "lineHeight": 16,
          "minHeight": 16,
        },
        [
          {
            "paddingTop": 8,
            "textAlign": "center",
          },
          {
            "flex": 1,
          },
        ],
      ]
    }
  >
    descriptionText
  </Text>
</View>
`;

exports[`@lad-tech/mobydick-core/Title should renders correctly without titleFont 1`] = `
<View
  style={
    {
      "marginBottom": 8,
      "marginTop": 12,
    }
  }
>
  <Text
    allowFontScaling={true}
    style={
      [
        {
          "color": "#20242D",
          "fontFamily": "Inter-SemiBold",
          "fontSize": 18,
          "lineHeight": 22,
          "minHeight": 22,
        },
        [
          {
            "textAlign": "center",
          },
          {
            "flex": 1,
          },
        ],
      ]
    }
  >
    title
  </Text>
</View>
`;
